support for multiple attractiveness factors

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <input type="range" min="0" max="2" value="1" step=".1" class="slider" id="distanceExponent">
             </div>
 
-            <h4>Attractiveness factors: <span id="attractivenessValue"></span></h4>
+            <h4>Attractiveness factors: <input type="text" id="attractivenessValue" size="40"></h4>
             <p>Attractiveness factors are the qualities about the destination that encourage a resident to vist.</p> 
-
+            <p>Enter a comma-separated list of properties to use for attractiveness. The following properties are available for the destination, although only numeric properties can be used as factors: <span id="destinationProperties"></span>
         </div>
     </div>
 </div>
