--- a/final.html
+++ b/final.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" href="final.css">
   </head>
   <body>
-    <div class="top">Exploring Laal NYC's Data</div>
-  
+    <div class="top"><center>Exploring Laal NYC's Data</center></div>
     <div class="main">
     <div class="content">
         <div class="story"> </div>
@@ -18,7 +17,6 @@
             <button class="slide-nav-button" id="next-slide">⧐</button>
         </div>
         </div>
-    
         <div class="map" id="map"></div>
     </div>
   <!-- Javascript Imports -->
