--- a/final.html
+++ b/final.html
@@ -16,7 +16,7 @@
             <button class="slide-nav-button" id="prev-slide">⧏</button>
             <button class="slide-nav-button" id="next-slide">⧐</button>
         </div>
-        </div>
+      </div>
         <div class="map" id="map"></div>
     </div>
   <!-- Javascript Imports -->
@@ -24,5 +24,6 @@
     <script src="https://unpkg.com/showdown@1.9.0/dist/showdown.min.js"></script>
     <script src="final.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="///cdnjs.cloudflare.com/ajax/libs/chroma-js/0.5.2/chroma.min.js"></script>
   </body>
   </html>
