--- a/final.html
+++ b/final.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="final.css">
   </head>
   <body>
-    <div class="top"><center>Laal NYC's Census 2020 Impact <img src=laal logo JPG.jpg></center></div>
+    <div class="top"><center>Laal NYC's Census 2020 Impact </center></div>
     <div class="main">
     <div class="content">
         <div class="story"> </div>
@@ -23,6 +23,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://unpkg.com/showdown@1.9.0/dist/showdown.min.js"></script>
     <script src="final.js"></script>
+    <script src="slides.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   </body>
   </html>
