--- a/final.html
+++ b/final.html
@@ -12,6 +12,8 @@
         <div class="story"> </div>
         <div class="slide-title"></div>
         <div class="slide-content"></div>
+           <div id="chartDiv" style="width:50%; height:300px; margin:0 auto;"></div>
+           <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
         <div class="slide-controls">
             <button class="slide-nav-button" id="prev-slide">⧏</button>
             <button class="slide-nav-button" id="next-slide">⧐</button>
@@ -23,7 +25,6 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://unpkg.com/showdown@1.9.0/dist/showdown.min.js"></script>
     <script src="final.js"></script>
-    <script src="slides.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   </body>
   </html>
