--- a/final.html
+++ b/final.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="final.css">
   </head>
   <body>
-    <div class="top"><center>Laal NYC's Census 2020 Impact</center></div>
+    <div class="top"><center>Laal NYC's Census 2020 Impact <img src="laal logo JPG.jpg" style="float:left;width:45px;height:45px;"></center></div>
     <div class="main">
     <div class="content">
         <div class="story"> </div>
