--- a/final.html
+++ b/final.html
@@ -24,7 +24,8 @@
   <!-- Javascript Imports -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://unpkg.com/showdown@1.9.0/dist/showdown.min.js"></script>
-    <script src="final.js"></script>
+    <script src="final3.js"></script>
+    <script src="slides.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   </body>
   </html>
