updated with styling and slide movement

--- a/final.html
+++ b/final.html
@@ -13,7 +13,6 @@
         <div class="slide-title"></div>
         <div class="slide-content"></div>
            <div id="chartDiv" style="width:50%; height:300px; margin:0 auto;"></div>
-           <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
         <div class="slide-controls">
             <button class="slide-nav-button" id="prev-slide">⧏</button>
             <button class="slide-nav-button" id="next-slide">⧐</button>
@@ -24,8 +23,9 @@
   <!-- Javascript Imports -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://unpkg.com/showdown@1.9.0/dist/showdown.min.js"></script>
-    <script src="final3.js"></script>
-    <script src="slides.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.3/underscore-min.js"></script>
+    <script src="final.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   </body>
   </html>
