--- a/final.html
+++ b/final.html
@@ -12,7 +12,7 @@
         <div class="story"> </div>
         <div class="slide-title"></div>
         <div class="slide-content"></div>
-           <div id="chartDiv" style="width:50%; height:300px; margin:0 auto;"></div>
+           <div id="myChart" style="width:50%; height:300px; margin:0 auto;"></div>
         <div class="slide-controls">
             <button class="slide-nav-button" id="prev-slide">⧏</button>
             <button class="slide-nav-button" id="next-slide">⧐</button>
@@ -26,6 +26,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.3/underscore-min.js"></script>
     <script src="final.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
   </body>
   </html>
