--- a/final.html
+++ b/final.html
@@ -12,7 +12,7 @@
         <div class="story"> </div>
         <div class="slide-title"></div>
         <div class="slide-content"></div>
-           <div id="myChart" style="width:50%; height:300px; margin:0 auto;"></div>
+           <canvas id="myChart" style="width:50%; height:300px; margin:0 auto;"></canvas>
         <div class="slide-controls">
             <button class="slide-nav-button" id="prev-slide">⧏</button>
             <button class="slide-nav-button" id="next-slide">⧐</button>
